# echem-data-tool

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: deploy-docs.yml
design-docs/: code_structure_draft.md  ecell_metadata_specs.md  file_format_specs.md
docs/: code_structure_draft.md  echem_data_tool.html  index.html  search.js
src/echem_data_tool/: __init__.py  main.py
